scripts/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flaskapp
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-nginx
    cert-manager.io/acme-challenge-type: http01
    cert-manager.io/issue-temporary-certificate: "true"
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - flaskapp.babosbird.com
    secretName: tls-secret
  rules:
  - host: flaskapp.babosbird.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flaskapp
            port:
              number: 80
